fix footer position, index bgcolor, navbar.css, veterinaria.css; added: phpmailer, contact.css, contact folder with files, updated .env

--- a/public/css/veterinaria.css
+++ b/public/css/veterinaria.css
@@ -7,6 +7,16 @@
   --form-color: #8e1732;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: var(--main-background);
+}
+
+footer {
+  margin-top: auto;
+}
 .footerblock {
   border-top: 10px solid black;
   border-left: 5px solid black;
