--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,27 +1,19 @@
-:root {
-  --main-color: rgb(92, 10, 10);
-  --link-color: white;
-}
-
 nav {
-    border-bottom: 10px solid black;
-    border-left: 5px solid black;
-    border-right: 5px solid black;
-    background-color: var(--main-color);
-    text-align: center;
+  border-bottom: 10px solid black;
+  border-left: 5px solid black;
+  border-right: 5px solid black;
+  background-color: var(--main-color);
+  text-align: center;
 }
 
 a.nav-link {
-    color: var(--link-color);
-    font-size: 1.5em;
-    /*This text-shadow property and its settings are for making the black text outline*/
-    text-shadow: 
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        1px 1px 0 #000;
+  color: var(--link-color);
+  font-size: 1.5em;
+  /*This text-shadow property and its settings are for making the black text outline*/
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
 }
 
 a.nav-link:hover {
-    outline: 2px solid white;
+  outline: 2px solid white;
 }
