--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -29,6 +29,9 @@ a.nav-link:hover {
 }
 
 .iniciar_sesion {
-  display: block
-  /* test also width:100% */
+  width:100%;
+}
+
+.register_button {
+  font-family: var(--main-font);
 }
