--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,9 +1,19 @@
 nav {
-  border-bottom: 10px solid black;
-  border-left: 5px solid black;
-  border-right: 5px solid black;
   background-color: var(--main-color);
   text-align: center;
+}
+
+.navbar-nav {
+  margin-right: 22%;
+}
+.nav-item {
+  padding-inline: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar-nav {
+    margin-right: 20%;
+  }
 }
 
 a.nav-link {
@@ -29,7 +39,7 @@ a.nav-link:hover {
 }
 
 .iniciar_sesion {
-  width:100%;
+  width: 100%;
 }
 
 .dropdown_button {
