--- a/public/css/veterinaria.css
+++ b/public/css/veterinaria.css
@@ -17,11 +17,17 @@ body {
 
 footer {
   margin-top: auto;
+  width: 99.5%;
 }
+@media only screen and (max-width: 600px) {
+  footer {
+    width: 97.5%;
+  }
+}
+
 .footerblock {
-  border-top: 10px solid black;
-  border-left: 5px solid black;
-  border-right: 5px solid black;
+  border-inline: 0.3vw solid black;
+  border-block: 0.5vw solid black;
   background-color: var(--main-color);
   text-align: center;
 }
