Fixed: fondo vertical problem, whatsapp icon display

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -3,10 +3,12 @@
     background-size: cover;
     background-position: center;
     color: var(--main-color);
-    height: 100%;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
     text-shadow: 2px 2px 4px rgba(123, 121, 121, 0.447);
     opacity: 80%;
+    outline: 1px solid grey;
+    font-family: var(--main-font);
 }
 
 .container-fluid {
@@ -17,19 +19,35 @@
     background-color: var(--main-color);
     border-radius: 10%;
     padding: 10px;
-    
 }
 
 .whatsapp-link, .whatsapp-link:visited, .whatsapp-link:hover {
     color: white;
-    background-color: red;
 }
 
 .card {
-    width: 18rem; position: relative; overflow: hidden; color: white; text-shadow: 2px 2px 4px black;
+    width: 18rem; 
+    position: relative; 
+    overflow: hidden; 
+    color: white; 
+    text-shadow: 2px 2px 4px black;
+    outline: 3px solid black;
+    font-family: var(--main-font);
+    text-align: center;
+    font-weight: bold;
+}
+
+button {
+    border: none;
+    outline: none;
+    background: none;
 }
 
 .card-img-top {
     height: 250px; object-fit: cover;
 }
 
+.cartas {
+    display: flex;
+    justify-content: center;
+}
