--- a/public/css/veterinaria.css
+++ b/public/css/veterinaria.css
@@ -13,6 +13,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: var(--main-background);
+  font-family: var(--main-font);
 }
 
 footer {
