--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -1,26 +1,23 @@
 .pag{
-    background-color: rgb(255, 255, 206);
+    background-color: rgb(251, 144, 183);
+    font-family: var(--main-font);
     border: 5px solid black;
     border-radius: 10px;
-    padding: 10px;
-    margin: 10px;
+    padding: 14px;
     text-align: center;
 }
 
-.pag p{
-    font-family: "Montserrat"; 
+.titulo{
+    font-family: var(--main-font);
+    font-weight: bold;
     color: black;
-    text-align: center;
+    text-shadow: 2px 2px 4px white;;
+    background-image: url("../../assets/fondo-aboutus.png");
+    background-size: cover;
+    background-position: center;
+    padding-bottom: 10%;
 }
 
-.pag h1{
-    font-family: "Montserrat"; 
-    color: black;
-    text-align: center;
-}
-
-.pag h2{
-    font-family: "Montserrat";
-    color: black;
-    text-align: center;
+.aboutus-texto > p{
+    background-color: rgb(251, 144, 183);
 }
