--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -25,8 +25,7 @@
     color: white;
 }
 
-.card {
-    width: 20vw; 
+.card { 
     position: relative; 
     overflow: hidden; 
     color: white; 
@@ -36,6 +35,12 @@
     text-align: center;
     font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+      width: 300px;
+    }
+  }
 
 button {
     border: none;
@@ -50,4 +55,4 @@ button {
 .cartas {
     display: flex;
     justify-content: center;
-}
+}   
