--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,3 +21,24 @@
   width:100%;
   height:auto;
 }
+
+.foto-mascota{
+  width: 10%;
+  height: 10%;
+  overflow:hidden;
+}
+
+.foto-mascota > img{
+  width: 100%;
+  height: 100%;
+  object-fit:cover;
+  padding: 7%;
+}
+
+@media only screen and (max-width: 600px) {
+  .foto-mascota {
+    width:70%;
+    height:70%;
+    overflow:hidden;
+  }
+}
