Fixed logo button background and homepage css being loaded all time.

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -10,6 +10,12 @@ nav {
   padding-inline: 10px;
 }
 
+.logo {
+  border: none;
+  outline: none;
+  background: none;
+}
+
 @media only screen and (max-width: 600px) {
   .navbar-nav {
     margin-right: 15%;
