--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -1,9 +1,19 @@
+.registration-form {
+    padding: 5% 5%;
+    align-items: center;
+    background-color: #f6c18b;
+    border-radius: 10%;
+    font-family: var(--main-font);
+}
+
+.registration-container {
+    padding: 10px 10px;
+}
 .form-group {
     margin-bottom: 20px;
 }
 
 h2 {
-    font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -18,6 +28,6 @@ small {
     color: grey;
 }
 
-form > * {
-    font-family: var(--main-font);
+.form-group > label {
+    font-weight: 600;
 }
