--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,53 +1,59 @@
 nav {
-  background-color: var(--main-color);
-  text-align: center;
+    background-color: var(--main-color);
 }
 
 .navbar-nav {
-  margin-right: 22%;
+    margin-right: 22%;
 }
 .nav-item {
-  padding-inline: 10px;
+    align-items: stretch;
 }
 
 .logo {
-  border: none;
-  outline: none;
-  background: none;
+    border: none;
+    outline: none;
+    background: none;
 }
 
 @media only screen and (max-width: 600px) {
-  .navbar-nav {
-    margin-right: 15%;
-  }
+    .navbar-nav {
+        margin-right: 15%;
+    }
 }
 
-a.nav-link {
-  color: var(--link-color);
-  font-size: 1.5em;
-  /*This text-shadow property and its settings are for making the black text outline*/
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
+button.nav-btn {
+    width: 100%;
+    height: 100%;
+    color: var(--link-color);
+    font-size: 1.5em;
+    border-radius: 5px;
+    font-weight: 700;
+    transition: 1s ease;
+    background-color: rgba(0, 0, 0, 0);
+    border-width: 0px;
 }
 
-a.nav-link:hover {
-  outline: 2px solid white;
+button.nav-btn:hover,
+button.nav-btn:focus {
+    color: var(--main-color);
+    background-color: var(--link-color);
+    transition: 1s ease;
 }
 
 .form-group * {
-  color: var(--main-color);
-  font-family: var(--main-font);
+    color: var(--main-color);
+    font-family: var(--main-font);
 }
 
 .form-check * {
-  color: solid black;
-  font-family: var(--main-font);
+    color: solid black;
+    font-family: var(--main-font);
 }
 
 .iniciar_sesion {
-  width: 100%;
+    width: 100%;
 }
 
 .dropdown_button {
-  font-family: var(--main-font);
+    font-family: var(--main-font);
 }
