--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,12 +1,12 @@
 nav {
     background-color: var(--main-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar-nav {
     margin-right: 22%;
-}
-.nav-item {
-    align-items: stretch;
 }
 
 .warning {
