--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -1,9 +1,9 @@
 .pag{
-    background-color: rgb(251, 144, 183);
+    background-color: #DFFFE0;
     font-family: var(--main-font);
     border: 5px solid black;
     border-radius: 10px;
-    padding: 14px;
+    
     text-align: center;
 }
 
@@ -15,9 +15,9 @@
     background-image: url("../../assets/fondo-aboutus.png");
     background-size: cover;
     background-position: center;
-    padding-bottom: 10%;
+     
 }
 
 .aboutus-texto > p{
-    background-color: rgb(251, 144, 183);
+    background-color: #DFFFE0;
 }
