--- a/public/css/veterinaria.css
+++ b/public/css/veterinaria.css
@@ -1,8 +1,8 @@
 :root {
-    --main-color: rgb(92, 10, 10);
+    --main-color: #2D6A4F;
     --text-color: white;
     --link-color: white;
-    --main-background: #eee3e7;
+    --main-background: #E8F6F3;
     --table-color: #b070af;
     --main-font: 'Montserrat', sans-serif;
     --form-color: #8e1732;
@@ -58,7 +58,9 @@ footer {
 
 a {
     font-family: var(--main-font);
+    color:#000000;
     text-decoration: none;
     font-size: 1.1em;
-    font-weight: 900;
+    font-weight: 500;
+    
 }
