--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -11,11 +11,8 @@
     font-family: var(--main-font);
 }
 
-.container-fluid {
-    height: 100%;
-}
-
 .icono {
+    box-sizing: border-box;
     background-color: var(--main-color);
     border-radius: 10%;
     padding: 10px;
