--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -8,6 +8,12 @@ header {
     align-items: center;
 }
 
+@media only screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+    }
+}
+
 nav {
     box-sizing: border-box;
     margin: 0 !important;
@@ -53,13 +59,6 @@ li.nav-item {
 
     transition: 1s ease;
 }
-
-@media only screen and (max-width: 600px) {
-    .navbar-nav {
-        margin-right: 15%;
-    }
-}
-
 button.nav-btn {
     width: 100%;
     height: 100%;
@@ -83,6 +82,7 @@ button.nav-btn:has(+ .dropdown-menu:hover) {
 }
 
 .dropdown-menu {
+    position: absolute !important;
     -webkit-transform: translate(-25%, 0);
     -o-transform: translate(-25%, 0);
     transform: translate(-25%, 0);
