--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,45 +1,65 @@
+.profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f6c18b;
+    border-radius: 50px;
+}
+
+.pfp-image {
+    height: 15vh;
+    width: 10vw;
+    border-radius: 50%;
+    margin-top: 20px;
+    border: 5px solid var(--main-color);
+}
+
 .pet-card {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: rgba(142, 23, 51, 0.75);
+    border: 1px solid var(--main-color);
+    border-radius: 8px;
+    background-color: rgba(142, 23, 51, 0.75);
 }
 
 .pet-card_info {
-  flex-grow: 1;
-  padding-left: 20px;
+    flex-grow: 1;
+    padding-left: 20px;
 }
 
 .pet-card_info h3 {
-  margin-top: 0;
-  margin-bottom: 10px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 .pet-card_action button {
-  cursor: pointer;
-  
-  display: block;
-  width:100%;
-  height:auto;
+    cursor: pointer;
+
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
-.foto-mascota{
-  width: 10%;
-  height: 10%;
-  margin: auto;
-  overflow:hidden;
+.foto-mascota {
+    width: 10%;
+    height: 10%;
+    margin: auto;
+    overflow: hidden;
 }
 
-.foto-mascota > img{
-  width: 100%;
-  height: 100%;
-  object-fit:cover;
-  padding: 7%;
+.foto-mascota > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding: 7%;
 }
 
 @media only screen and (max-width: 600px) {
-  .foto-mascota {
-    width:70%;
-    height:70%;
-    overflow:hidden;
-  }
+    .foto-mascota {
+        width: 70%;
+        height: 70%;
+        overflow: hidden;
+    }
+    .pfp-image {
+        height: 100%;
+        width: 100%;
+    }
 }
