--- a/public/css/veterinaria.css
+++ b/public/css/veterinaria.css
@@ -2,6 +2,7 @@
     --main-color: rgb(92, 10, 10);
     --text-color: white;
     --link-color: white;
+    --button-link-color: #0d6efd;
     --main-background: #eee3e7;
     --table-color: #b070af;
     --main-font: 'Montserrat', sans-serif;
@@ -33,6 +34,17 @@ footer {
     border-block: 0.5vw solid black;
     background-color: var(--main-color);
     text-align: center;
+}
+
+.footerblock button {
+    font-family: var(--main-font);
+    background-color: var(--main-color);
+    font-size: 1.1em;
+    font-weight: 900;
+    color: var(--button-link-color);
+    border: none;
+    padding: 0.5em 1em;
+    cursor: pointer;
 }
 
 .footerblock p {
