--- a/public/css/aboutus.css
+++ b/public/css/aboutus.css
@@ -1,23 +1,34 @@
-.pag{
+.pag {
     background-color: rgb(251, 144, 183);
     font-family: var(--main-font);
     border: 5px solid black;
     border-radius: 10px;
     padding: 14px;
     text-align: center;
+    margin-bottom: 5%;
 }
 
-.titulo{
+.titulo {
     font-family: var(--main-font);
-    font-weight: bold;
-    color: black;
-    text-shadow: 2px 2px 4px white;;
-    background-image: url("../../assets/fondo-aboutus.png");
+    background-image: url('../../assets/fondo-aboutus.png');
     background-size: cover;
     background-position: center;
-    padding-bottom: 10%;
+    padding: 2%;
 }
 
-.aboutus-texto > p{
+.titulo div h1 {
+    text-shadow: 2px 2px 4px white;
+    color: black;
+    font-size: 3em;
+    font-weight: 900;
+}
+
+.aboutus-texto > p {
     background-color: rgb(251, 144, 183);
+}
+
+.aboutus-texto h2 {
+    font-size: 2em;
+    font-weight: 700;
+    margin-bottom: 5px;
 }
