--- a/public/css/requestAppointment.css
+++ b/public/css/requestAppointment.css
@@ -18,3 +18,21 @@
     display: flex;
     flex-direction: column;
 }
+.button-back {
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 50px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+
+    transition: 0.3s ease;
+}
+
+.button-back:hover {
+    background-color: white;
+    border: none;
+    color: var(--main-color);
+
+    transition: 0.3s ease;
+}
