--- a/public/css/viewAppointments.css
+++ b/public/css/viewAppointments.css
@@ -23,3 +23,22 @@
     color: var(--main-color);
     border-radius: 10px;
 }
+
+.button-back {
+    background-color: var(--secondary-color);
+    border: none;
+    border-radius: 50px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.2rem;
+
+    transition: 0.3s ease;
+}
+
+.button-back:hover {
+    background-color: white;
+    border: none;
+    color: var(--main-color);
+
+    transition: 0.3s ease;
+}
